# TrainNN

./: .gitignore  CMakeLists.txt  README.md
Analysis/: main.py
analysis/: main.py
include/: config.hpp
include/CUDAProvider/: test.cuh  test_helpers.cuh
include/Cuda/: CudaCommonFunctions.cuh  CudaFunctions.cuh  CudaHelper.cuh  CudaKernelFunctions.cuh  CudaSharedFunctions.cuh  CudaStandardFunctions.cuh
include/Dataset/: Dataset.h  ImageFlattenDataset.h
include/Matrix/: Matrix.h
include/Matrix/Calculation/: CpuMatrixCalculation.h  GpuMatrixCalculation.cuh  GpuMatrixCalculation.h  IMatrixCalculation.h
include/Model/: Model.h
include/Model/Activation/: ActivationTypes.h  IActivation.h  ReluActivation.h  SigmoidActivation.h  SoftmaxActivation.h
include/Model/CostFunction/: BinaryCrossEntropy.h  CostTypes.h  CrossEntropy.h  ICostFunction.h
include/Model/Layer/: ILayer.h  Linear.h
include/Model/Metrics/: Accuracy.h
include/Model/Monitoring/: LogSample.h  Monitoring.h
src/: main.cpp
src/CUDAProvider/: test.cu  test_helpers.cu
src/Cuda/: CudaCommonFunctions.cu  CudaFunctions.cu  CudaHelper.cu  CudaKernelFunctions.cu  CudaSharedFunctions.cu  CudaStandardFunctions.cu
src/Dataset/: Dataset.cpp  ImageFlattenDataset.cpp
src/Matrix/: Matrix.cpp
src/Matrix/Calculation/: CpuMatrixCalculation.cpp  GpuMatrixCalculation.cpp  GpuMatrixCalculation.cu
src/Model/: Model.cpp
src/Model/Activation/: ActivationTypes.cpp  ReluActivation.cpp  SigmoidActivation.cpp  SoftmaxActivation.cpp
src/Model/CostFunction/: BinaryCrossEntropy.cpp  CostTypes.cpp  CrossEntropy.cpp
src/Model/Layer/: Linear.cpp
src/Model/Metrics/: Accuracy.cpp
src/Model/Monitoring/: LogSample.cpp  Monitoring.cpp
